# clinstagram

./: .gitignore  CONTRIBUTING.md  README.md  SKILL.md  pyproject.toml
.claude/skills/: clinstagram.md
.claude/tsc-cache/4306c4c1-6014-4d48-a217-87d789905fea/: affected-repos.txt
.team-runs/clinstagram-audit-2026-03-23/: mission.md
.team-runs/clinstagram-audit-2026-03-23/reports/: codex-auditor.md  competitive-researcher.md  gemini-auditor.md
docs/review/: chatgpt-browser-review-bundle.txt  chatgpt-browser-review-files.md  chatgpt-browser-review-prompt.md
src/clinstagram/: cli.py  config.py  db.py  media.py
src/clinstagram/auth/: private_login.py
src/clinstagram/backends/: base.py  capabilities.py  graph.py  private.py
src/clinstagram/commands/: _dispatch.py  auth.py  comments.py  config_cmd.py  dm.py  doctor_cmd.py  followers.py  media.py  post.py  skill_install.py  story.py  update_cmd.py  user.py
tests/: test_backends_base.py  test_cli.py  test_db.py  test_dispatch.py  test_e2e.py  test_graph_backend.py  test_media.py  test_private_login.py
